templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tradingview-webhook-app
  namespace: tv
  labels:
    app: tradingview-webhook
spec:
  replicas: 1
  revisionHistoryLimit: 2 # how many old replicasets to keep around.
  selector:
    matchLabels:
      app: tradingview-webhook
  template:
    metadata:
      labels:
        app: tradingview-webhook
    spec:
      containers:
      - name: tradingview-webhook
        image: kdoan/tradingview-webhook:latest
        imagePullPolicy: IfNotPresent
        ports:
          - name: api
            containerPort: 8000
            protocol: TCP
