templates/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibkr-gateway
  namespace: tv
  labels:
    app.kubernetes.io/component: "gateway"
spec:
  replicas: 1
  revisionHistoryLimit: 1 # how many old replicasets to keep around.
  selector:
    matchLabels:
      app.kubernetes.io/component: "gateway"
  template:
    metadata:
      labels:
        app.kubernetes.io/component: "gateway"
    spec:
      containers:
        - name: ibkr-gateway
          image: ghcr.io/extrange/ibkr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: api
              containerPort: 8888
              protocol: TCP
            - name: novnc
              containerPort: 6080
              protocol: TCP
          # livenessProbe:
          #   tcpSocket:
          #     port: api
          #   initialDelaySeconds: 120
          #   periodSeconds: 60
          # readinessProbe:
          #   tcpSocket:
          #     port: api
          #   initialDelaySeconds: 30
          #   periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: ibkr-gateway
  namespace: tv
spec:
  type: ClusterIP
  ports:
    - port: 8888
      targetPort: api
      protocol: TCP
      name: api
  selector:
    app.kubernetes.io/component: "gateway"
