templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tradingview-webhook-service
  namespace: tv
spec:
  selector:
    app: tradingview-webhook
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
